# fastapi-study

./: .gitignore  README.md  pyproject.toml  test.py
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/signup/: page.tsx
reference/src(reference)/: main.py
reference/src(reference)/databases/: connection.py  repository.py  test.ipynb
reference/src(reference)/schemas/: test.ipynb
src/: main.py  security.py  test.ipynb
src/api/: todo.py  user.py
src/database/: connection.py  orm.py  repository.py  test.ipynb
src/schema/: request.py  response.py
src/service/: user.py
src/tests/: conftest.py  test_main.py  test_todos_api.py  test_users_api.py
